--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+repository: ekrkr/ekrkr.github.io
 title: Ela Krepska
 email: e.krepska@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -27,8 +28,12 @@ github_username:  ekrkr
 # Build settings
 markdown: kramdown
 theme: minima
+#theme: hyde
+#remote_theme: pages-themes/architect@v0.2.0
+#remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-feed
+#- jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
